# Cohort-1-Data-Engineering-Zoomcamp-jan26

./: README.md  Untitled4.ipynb
data-engineering-zoomcamp/: Dockerfile  README.md  pyproject.toml  requirements.txt
data-engineering-zoomcamp/src/: ingest.py  utils.py
